Basic API Code with Get

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 ################################################################################
 
 /API/CODEToad.API/CODEToad.API/bin
+/API/CODEToad.API/CODEToad.API/obj/Debug
+/API/CODEToad.API/CODEToad.Data/bin/Debug
+/API/CODEToad.API/CODEToad.Data/obj/Debug
+/API/CODEToad.API/packages
+/API/CODEToad.API/.vs/CODEToad.API/v15
