Removed embedded class and changed code to use separate CodeNote class, also renamed from plural name

--- a/API/CODEToad.API/CODEToad.Data/CODEToad.Data.csproj
+++ b/API/CODEToad.API/CODEToad.Data/CODEToad.Data.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CODEToad.Data</RootNamespace>
     <AssemblyName>CODEToad.Data</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -49,6 +50,7 @@
     <Reference Include="System.Security" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Transactions" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -57,14 +59,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CodeToadModel.cs" />
+    <Compile Include="CodeToadContext.cs" />
     <Compile Include="Migrations\201902021533348_bse.cs" />
     <Compile Include="Migrations\201902021533348_bse.Designer.cs">
       <DependentUpon>201902021533348_bse.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\CodeNotes.cs" />
+    <Compile Include="Models\CodeNote.cs" />
+    <Compile Include="Models\SearchNote.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\ICodeNote.cs" />
+    <Compile Include="Repository\Repository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
